--- a/site/training/developer-fundamentals/learning-to-run-tests.qmd
+++ b/site/training/developer-fundamentals/learning-to-run-tests.qmd
@@ -237,7 +237,7 @@ Make sure you're logged in and have refreshed the page in a Chromium-based web b
 With your code snippet copied to your clipboard:
 
 1. Open **2 — Start the model development process**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_development/2-start_development_process.ipynb){target="_blank"}
-2. Run the following cells in the Setting up section: <br>**Initialize the {{< var validmind.developer >}}** / **Import sample dataset**.
+2. Run the following cells in the Setting up section: **Initialize the {{< var validmind.developer >}}** / **Import sample dataset**.
 
 :::
 
