--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -482,7 +482,7 @@ As we can observe from the output in our notebook, our champion model doesn't pa
 **Create a model finding**
 
 ::: {.f6}
-2.2.2. Model Performance — **Link Finding to Report** {{< fa chevron-right >}} **{{< fa plus >}} Create New Finding** > Enter your finding details {{< fa chevron-right >}} Select your finding: **Update Linked Findings**
+Within your **{{< fa shield >}} Validation Report**: 2.2.2. Model Performance — **Link Finding to Report** {{< fa chevron-right >}} **{{< fa plus >}} Create New Finding** {{< fa chevron-right >}} **Update Linked Findings**
 
 :::
 
@@ -647,10 +647,10 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ## {background-iframe="/notebooks/tutorials/model_validation/4-finalize_validation_reporting.html#use-external-test-providers" data-preload="yes"}
 
-:::: {.absolute bottom=15 .w-100 .f4 .tc .pl4 .overlay}
+:::: {.absolute bottom=15 .w-100 .f5 .tc .pl4 .overlay}
 **Use external test providers**
 
-::: {.f5}
+::: {.f6}
 Sometimes you may want to reuse the same set of custom tests across multiple models and share them with others in your organization, <br>like the model development team would have done with you in this example workflow featured in this series of notebooks:
 
 1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
