--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -473,7 +473,7 @@ While the example below focuses on a specific test result, you can follow the sa
 **Link validator evidence**
 
 ::: {.f6}
-Within your **{{< fa shield >}} Validation Report**: 2.2.1. Data Quality — **ValidMind Data Validation Class Imbalance**
+Within your **{{< fa shield >}} Validation Report**: 2.2.1. Data Quality — **ValidMind Data Validation Class Imbalance** {{< fa chevron-right >}} **Link Evidence to Report**
 
 :::
 
