--- a/site/guide/model-validation/view-filter-model-findings.qmd
+++ b/site/guide/model-validation/view-filter-model-findings.qmd
@@ -20,43 +20,7 @@ Access a complete list of filterable findings logged across all your models in t
 
 You can review findings for all models at once, or only look at findings linked to a specific model.
 
-#### All model findings
-
-To view findings for all models: 
-
-1. In the left sidebar, click **{{< fa triangle-exclamation >}} Findings**.
-
-   In the page that opens is a list of all model findings, including information for:
-
-   - Title
-   - Severity
-   - Status
-   - Inventory model
-   - Risk area
-   - Assignee
-   - Due date
-   - Creation date
-   - Business unit
-
-   ![List of findings across all models](all-model-findings.png){fig-alt="A screenshot showing a list of findings across all models" .screenshot}
-
-::: {.callout}
-Filter this list to include only findings you want to see,[^4] or toggle visibilty for column headers.[^5]
-
-:::
-
-2. Click on any model finding for more information, including the proposed remediation plan and any supporting attachments.[^6]
-
-   Attachments are listed with the following information:
-
-   - Filename 
-   - Icon representing file type
-   - Date uploaded
-   - The user who uploaded the file
-   - File size
-   - Notes
-
-   Click on the attachment to view or download the file. 
+{{< include _view-all-findings.qmd >}}
 
 #### Model-specific findings
 
