--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -358,9 +358,19 @@ Track issue resolution
 ::: {.column width="70%" .bl .pl4 .f4}
 As you prepare your report, review open or past due findings, close resolved ones, or add a mitigation plan:
 
-### Update a model finding 
+::: {.panel-tabset}
+
+### Update a model finding
 
 {{< include /guide/model-validation/_track_issue_resolution.qmd >}}
+
+### View all model findings
+
+Along with model-specific findings, you can also view and filter a list of findings across all models within the {{< var validmind.platform >}}:
+
+{{< include /guide/model-validation/_view-all-findings.qmd >}}
+
+:::
 
 :::
 ::::
