--- a/site/guide/model-validation/_view-all-findings.qmd
+++ b/site/guide/model-validation/_view-all-findings.qmd
@@ -58,7 +58,7 @@ To view findings for all models:
 
     [Filter this list](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings) to include only findings you want to see, or [toggle visibilty for column headers](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout).
 
-1. Click on any model finding for more information, including the proposed remediation plan and [any supporting attachments]((/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation)).
+1. Click on any model finding for more information, including the proposed remediation plan and [any supporting attachments](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation).
 
    Attachments are listed with the following information:
 
