--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -184,7 +184,7 @@ When you're done navigating around,
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
 :::: {.fr .f5 .mv6 .nr5 .pa4 .overlay}
-**Welcome to the model inventory**
+**Welcome to the {{< fa cubes >}} Inventory**
 
 Use the model inventory to track <br>
 comprehensive details for all your <br>
