--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -352,7 +352,7 @@ Track issue resolution
 [Learn more ...](/guide/model-validation/add-manage-model-findings.qmd#track-issue-resolution){.button target="_blank"}
 :::
 
-<br>Try it **live** on the next page. {{< fa hand-point-right >}}
+<br>Try it **live** on the next pages. {{< fa hand-point-right >}}
 :::
 
 ::: {.column width="70%" .bl .pl4 .f4}
@@ -377,37 +377,32 @@ Along with model-specific findings, you can also view and filter a list of findi
 
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
-<!-- ::: {.fr .f5 .nr5 .pa5 .overlay}
-**Close a model finding** WIP
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+**Update a model finding**
 
-WIP
-
-::: {.f5 .pl3 .pr3 .embed}
-WIP
+::: {.f6}
+1. From the **{{< fa cubes >}} Inventory**, select the name the model you registered to open up the model details page.
+2. In the left sidebar that appears for your model, click **{{< fa triangle-exclamation >}} Model Findings**.
+3. Select one of the findings you logged during this course, and make some changes to any of the fields.
+4. When you are finished editing, set the finding **[status]{.smallcaps}** to `Closed`.
 :::
 
-When you're done navigating around,
-<br>click [{{< fa chevron-right >}}]() to continue.
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
-::: -->
+:::
 
 ## {background-iframe="https://app.prod.validmind.ai/model-findings" background-interactive="true" data-preload="yes"}
 
-<!-- ::: {.fr .f5 .nr5 .pa5 .overlay}
-**View all {{< fa triangle-exclamation >}} Model Findings** WIP
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+**View all {{< fa triangle-exclamation >}} Model Findings** 
 
-WIP
-
-::: {.f5 .pl3 .pr3 .embed}
-WIP
+::: {.f6}
+Filter this list to include only findings you want to see, or toggle visibilty for column headers.
 :::
 
-When you're done navigating around,
-<br>click [{{< fa chevron-right >}}]() to continue.
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
-::: -->
-
-
+:::
 
 # Submit report for approval {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -563,21 +558,19 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
 
-<!-- :::: {.fr .f4 .mv6 .nr4 .pa4 .overlay}
-**{{< fa square-poll-vertical >}} Analytics** WIP
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+**Welcome to {{< var vm.platform >}} {{< fa square-poll-vertical >}} Analytics**
 
-Under **{{< fa square-poll-vertical >}} Analytics**, you can find:
+::: {.f6}
+Here, you can find executive summaries, track information on models, findings, and more. For example:
 
-- Executive summaries
-- Model tracking
-- Risk assessments
-- Compliance review
-- Remediation tracking
+1. Click **Findings** to review reports on findings.
+3. Click into any widget to review the findings reported by that widget.
+:::
 
-Explore existing reports, <br>then click [{{< fa chevron-right >}}]() to continue.
-:::: -->
+When you're done, click [{{< fa chevron-right >}}]() to continue.
 
-
+::::
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -598,15 +591,17 @@ Finalizing validation reports
 ::: {.column width="70%" .bl .pl4 .f4}
 In this final module, you learned how to:
 
-- [x] View logged test result metadata
-- [x] Add or edit content blocks in your model documentation
-- [x] Submit your model documentation for approval
+- [x] Add or edit content blocks in your validation report
+- [x] Assess the compliance of a model within your validation report
+- [x] Manage model findings via multiple methods
+- [x] Submit your validation report for approval
 - [x] Collaborate with other stakeholders on your model
 - [x] Track updates on your model
+- [x] Navigate the analytics dashboard
 :::
 ::::
 
-::: {.f2}
+::: {.f3}
 <br>
 There is more that {{< var vm.product >}} can do to help you validate models, from using your own template to code samples you can adapt for your own use case:
 :::
