--- a/site/guide/model-validation/_add-finding-via-section.qmd
+++ b/site/guide/model-validation/_add-finding-via-section.qmd
@@ -49,7 +49,7 @@ While working within a section of your documentation, you can easily log a findi
 
 1. When you are done, click **Save** to submit the finding. 
 
-   Once created, you can then [add supporting documentation to your finding](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation).
+   Once created, you can then [add supporting documentation to your finding](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation){target="_blank"}.
 
 ::::
 
