--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -336,7 +336,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 **Initialize the model objects**
 
 ::: {.f6}
-In addition to the initialized datasets, you'll also need to initialize a ValidMind model object (`vm_model`) that can be passed to other functions for analysis and tests on the data for each of our two models using [the `vm.init_model()` method](/validmind/validmind.qmd#init_model):
+In addition to the initialized datasets, you'll also need to initialize a ValidMind model object (`vm_model`) that can be passed to other functions for analysis and tests on the data for each of our two models using [the `vm.init_model()` method](/validmind/validmind.qmd#init_model){target="_blank"}:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the section **Initializing the model objects**.
@@ -393,7 +393,7 @@ Finally, we want to verify the relative influence of different input features on
 **Run model performance tests**
 
 ::: {.f6}
-Use [`vm.tests.list_tests()`](/validmind/validmind/tests.qmd#list_tests) to identify all the model performance tests for classification:
+Use [`vm.tests.list_tests()`](/validmind/validmind/tests.qmd#list_tests){target="_blank"} to identify all the model performance tests for classification:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the Running model evaluation tests section: **Run model performance tests**
@@ -482,7 +482,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 **Run diagnostic tests**
 
 ::: {.f6}
-This time, `use list_tests()` to identify all the model diagnosis tests for classification:
+This time, use `list_tests()` to identify all the model diagnosis tests for classification:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the Running model evaluation tests section: **Run diagnostic tests**
