--- a/site/guide/model-validation/_add-finding-via-overview.qmd
+++ b/site/guide/model-validation/_add-finding-via-overview.qmd
@@ -40,6 +40,6 @@ To log a finding from the documentation overview:
 
 1. When you are done, click **Save** to submit the finding. 
 
-   Once created, you can then [add supporting documentation to your finding](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation).
+   Once created, you can then [add supporting documentation to your finding](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation){target="_blank"}.
 
 ::::
