--- a/site/guide/model-validation/_view-all-findings.qmd
+++ b/site/guide/model-validation/_view-all-findings.qmd
@@ -56,9 +56,9 @@ To view findings for all models:
    - Creation date
    - Business unit
 
-    [Filter this list](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings) to include only findings you want to see, or [toggle visibilty for column headers](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout).
+    [Filter this list](/guide/model-validation/view-filter-model-findings.qmd#filter-and-sort-model-findings){target="_blank"} to include only findings you want to see, or [toggle visibilty for column headers](/guide/model-validation/view-filter-model-findings.qmd#customize-model-findings-layout){target="_blank"}.
 
-1. Click on any model finding for more information, including the proposed remediation plan and [any supporting attachments](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation).
+1. Click on any model finding for more information, including the proposed remediation plan and [any supporting attachments](/guide/model-validation/add-manage-model-findings.qmd#manage-supporting-documentation){target="_blank"}.
 
    Attachments are listed with the following information:
 
