--- a/site/training/validator-fundamentals/running-data-quality-tests.qmd
+++ b/site/training/validator-fundamentals/running-data-quality-tests.qmd
@@ -430,6 +430,8 @@ While the example below focuses on a specific test result, you can follow the sa
 
 5. Select the Class Imbalance test results we logged: **ValidMind Data Validation Class Imbalance** 
 
+    ![The ClassImbalance tests selected](/notebooks/tutorials/model_validation/selecting-class-imbalance-results.png){fig-alt="Screenshot showing the ClassImbalance tests selected" .screenshot}
+
 6. Click **Update Linked Evidence** to add the test results to the validation report.
 
     Confirm that the results for the Class Imbalance test you inserted has been correctly inserted into section **2.2.1. Data Quality** of the report.
