--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -160,7 +160,7 @@ You will need to have already completed notebooks **1** and **2** during the fir
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-### {{< var vm.product >}} for model development
+### {{< var vm.product >}} for model validation
 
 Our series of four introductory notebooks for model validators include sample code and how-to information to get you started with {{< var vm.product >}}:
 
