Even more proofreading

--- a/site/training/validator-fundamentals/developing-challenger-models.qmd
+++ b/site/training/validator-fundamentals/developing-challenger-models.qmd
@@ -393,7 +393,7 @@ Finally, we want to verify the relative influence of different input features on
 **Run model performance tests**
 
 ::: {.f6}
-Use [`vm.tests.list_tests()`](/validmind/validmind/tests.qmd#list_tests){target="_blank"} to identify all the model performance tests for classification:
+Use the [`list_tests()` function](/validmind/validmind/tests.qmd#list_tests){target="_blank"} to identify all the model performance tests for classification:
 
 1. Continue with **3 — Developing a potential challenger model**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/3-developing_challenger_model.ipynb){target="_blank"}
 2. Run all the cells under the Running model evaluation tests section: **Run model performance tests**
@@ -426,7 +426,7 @@ Log a model finding
 ::: {.column width="70%" .bl .pl4 .f4}
 As we can observe from the output in our notebook, our champion model doesn't pass the `MinimumAccuracy` test based on the default thresholds of the out-of-the-box test, so let's log a model finding in the {{< var validmind.platform >}}:
 
-### Create a finding via a validation report
+#### Create a finding via a validation report
 
 1. From the **Inventory** in the ValidMind Platform, go to the model you connected to earlier.
 
@@ -594,7 +594,7 @@ Custom tests
 :::
 
 ::: {.column width="70%" .bl .pl4 .f3}
-Let's implement a *custom test* that calculates the confusion matrix:
+Let's implement a *custom test* that calculates a confusion matrix:
 
 - You'll note that the custom test function is just a regular Python function that can include and require any Python library as you see fit.
 - In a usual model validation situation, you would load a saved custom test provided by the model development team. In the following section, we'll have you implement the same custom test and make it available for reuse, to familiarize you with the processes.
@@ -611,7 +611,7 @@ Let's implement a *custom test* that calculates the confusion matrix:
 An *inline test* refers to a test written and executed within the same environment as the code being tested — <br>in the following example, right in our Jupyter Notebook —  without requiring a separate test file or framework:
 
 1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
-2. Run all the cells in the sections under Implementing a custom tests: **Implement a custom inline test**
+2. Run all the cells in the following sections under Implementing custom tests: **Implement a custom inline test**
 
 :::
 
@@ -628,7 +628,7 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 Sometimes you may want to reuse the same set of custom tests across multiple models and share them with others in your organization, <br>like the model development team would have done with you in this example workflow featured in this series of notebooks:
 
 1. Continue with **4 — Finalize testing and validation**: [{{< fa square-arrow-up-right >}} JupyterHub](https://jupyterhub.validmind.ai/hub/user-redirect/lab/tree/tutorials/model_validation/4-finalize_validation_reporting.ipynb){target="_blank"}
-2. Run all the cells in the sections under Implementing a custom tests: **Use external test providers**
+2. Run all the cells in the following sections under Implementing custom tests: **Use external test providers**
 
 :::
 
