--- a/site/training/validator-fundamentals/finalizing-validation-reports.qmd
+++ b/site/training/validator-fundamentals/finalizing-validation-reports.qmd
@@ -545,7 +545,7 @@ Track changes & updates
 
 ::: {.f6}
 1. From the **{{< fa cubes >}} Inventory**, select the name of your model you registered for this course to open up the model details page.
-2. In the left sidebar that appears for your model, click **Model Activity**.
+2. In the left sidebar that appears for your model, click **{{< fa wifi >}} Model Activity**.
 3. Filter the following activity: **Comments** | **Status Updates** | **Model Updates** | **Test Results**
 
 :::
@@ -559,7 +559,7 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 ## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
 
 :::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
-**Welcome to {{< var vm.platform >}} {{< fa square-poll-vertical >}} Analytics**
+**Welcome to {{< fa square-poll-vertical >}} Analytics**
 
 ::: {.f6}
 Here, you can find executive summaries, track information on models, findings, and more. For example:
