--- a/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
+++ b/site/training/validator-fundamentals/using-validmind-for-model-validation.qmd
@@ -243,12 +243,12 @@ When you're done, <br>click [{{< fa chevron-right >}}]() to continue.
 :::: {.absolute bottom=15 left=0 right=50 .w-100 .f5 .tc .pl4 .pr4 .overlay}
 **Assign validator credentials**
 
+::: {.f6}
 In order to log tests as a validator instead of as a developer, we'll need to adjust your **model stakeholder** permissions:
 
-::: {.f6 .tl}
 1. From the **{{< fa cubes >}} Inventory**, select the name the model you registered to open up the model details page.
 2. Remove yourself as a developer by clicking on the **[developers]{.smallcaps}** tile, then clicking on the **x** next to your name. Click **Save** to apply your changes to that role.
-3. Add yourself as a validator by clicking on the [validators]{.smallcaps} tile, and selecting your name from the drop-down menu. Click **Save** to apply your changes to that role.
+3. Add yourself as a validator by clicking on the **[validators]{.smallcaps}** tile, and selecting your name from the drop-down menu. Click **Save** to apply your changes to that role.
 
 :::
 
