--- a/site/training/developer-fundamentals/finalizing-model-documentation.qmd
+++ b/site/training/developer-fundamentals/finalizing-model-documentation.qmd
@@ -45,6 +45,7 @@ This final module is part of a four-part series:
 3. [Submit documentation for approval](#submit-documentation-for-approval)
 4. [Collaborate with others](#collaborate-with-others)
 5. [Track model activity](#track-model-activity)
+6. [View analytics](#view-analytics)
 
 :::
 
@@ -379,6 +380,24 @@ When you're done, click [{{< fa chevron-right >}}]() to continue.
 
 ::::
 
+# View analytics {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+
+## {background-iframe="https://app.prod.validmind.ai/analytics" background-interactive="true" data-preload="yes"}
+
+:::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
+**Welcome to {{< fa square-poll-vertical >}} Analytics**
+
+::: {.f6}
+Here, you can find executive summaries, track information on models, findings, and more. For example:
+
+1. Click **Models** to review reports on models.
+3. Click into any widget to review the models reported by that widget.
+:::
+
+When you're done, click [{{< fa chevron-right >}}]() to continue.
+
+::::
+
 
 # In summary {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
 
@@ -404,10 +423,12 @@ In this final module, you learned how to:
 - [x] Submit your model documentation for approval
 - [x] Collaborate with other stakeholders on your model
 - [x] Track updates on your model
+- [x] Navigate the analytics dashboard
+
 :::
 ::::
 
-::: {.f2}
+::: {.f3}
 <br>
 There is more that {{< var vm.product >}} can do to help you create model documentation, from using your own template to code samples you can adapt for your own use case:
 :::
