Adding overview to Developer

--- a/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
+++ b/site/training/developer-fundamentals/using-validmind-for-model-development.qmd
@@ -317,6 +317,31 @@ When you're done, return to this page and click [{{< fa chevron-right >}}]() to 
 
 ::::
 
+## {.scrollable .center}
+
+:::: {.columns}
+::: {.column width="30%" .pr4 .f2}
+**Document Overview**
+
+::: {.tc}
+[Learn more...](/guide/model-validation/review-model-documentation.qmd){.button target="_blank"}
+:::
+<br>
+
+Try it **live** on the next page. {{< fa hand-point-right >}}
+
+:::
+
+::: {.column width="70%" .bl .pl4 .f3}
+
+{{< include /guide/model-documentation/_model-documentation-overview.qmd >}}
+
+{{< include /guide/model-documentation/_review-model-documentation.qmd >}}
+
+
+:::
+::::
+
 ## {background-iframe="https://app.prod.validmind.ai/model-inventory" background-interactive="true" data-preload="yes"}
 
 :::: {.absolute bottom=0 left=50 right=50 .w-95 .f5 .tc .pl4 .overlay}
@@ -327,7 +352,7 @@ Once you've called `preview_template()`:
 
 1. From the model inventory, select the name of your model to open up the model details page.
 2. On the left sidebar that appears for your model, click **{{< fa book-open >}} Documentation**.
-3. Note how the structure of the model documentation reflects the previewed template.
+3. Note how the structure of the Document Overview reflects the previewed template.
 
 :::
 
