Updated notebooks from beck/ownership-edit

--- a/site/notebooks/EXECUTED/model_development/1-set_up_validmind.ipynb
+++ b/site/notebooks/EXECUTED/model_development/1-set_up_validmind.ipynb
@@ -9,7 +9,11 @@
     "\n",
     "Learn how to use ValidMind for your end-to-end model documentation process based on common model development scenarios with our series of four introductory notebooks. This first notebook walks you through the initial setup of the ValidMind Library.\n",
     "\n",
-    "These notebooks use a binary classification model as an example, but the same principles shown here apply to other model types."
+    "These notebooks use a binary classification model as an example, but the same principles shown here apply to other model types.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Learn by doing</b></span>\n",
+    "<br></br>\n",
+    "Our course tailor-made for developers new to ValidMind combines this series of notebooks with more a more in-depth introduction to the ValidMind Platform — <a href=\"https://docs.validmind.ai/training/developer-fundamentals/developer-fundamentals-register.html\" style=\"color: #DE257E;\"><b>Developer Fundamentals</b></a></div>"
    ]
   },
   {
@@ -195,7 +199,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04c86ab5",
    "metadata": {},
    "source": [
     "<a id='toc3_2_1_'></a>\n",
@@ -268,7 +271,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8961052c",
    "metadata": {},
    "source": [
     "<a id='toc4_1_'></a>\n",
@@ -310,7 +312,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "52e9aa5d",
    "metadata": {},
    "source": [
     "<a id='toc4_2_'></a>\n",
@@ -334,7 +335,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0c997b4e",
    "metadata": {},
    "source": [
     "<a id='toc5_'></a>\n",
