--- a/site/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb
+++ b/site/notebooks/tutorials/model_validation/1-set_up_validmind_for_validation.ipynb
@@ -9,7 +9,11 @@
     "\n",
     "Learn how to use ValidMind for your end-to-end model validation process based on common scenarios with our series of four introductory notebooks. In this first notebook, set up the ValidMind Library in preparation for validating a champion model.\n",
     "\n",
-    "These notebooks use a binary classification model as an example, but the same principles shown here apply to other model types."
+    "These notebooks use a binary classification model as an example, but the same principles shown here apply to other model types.\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\" style=\"background-color: #B5B5B510; color: black; border: 1px solid #083E44; border-left-width: 5px; box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.2);border-radius: 5px;\"><span style=\"color: #083E44;\"><b>Learn by doing</b></span>\n",
+    "<br></br>\n",
+    "Our course tailor-made for validators new to ValidMind combines this series of notebooks with more a more in-depth introduction to the ValidMind Platform — <a href=\"https://docs.validmind.ai/training/validator-fundamentals/validator-fundamentals-register.html\" style=\"color: #DE257E;\"><b>Validator Fundamentals</b></a></div>"
    ]
   },
   {
@@ -190,13 +194,19 @@
     "\n",
     "In order to log tests as a validator instead of as a developer, on the model details page that appears after you've successfully registered your sample model:\n",
     "\n",
-    "1. Remove yourself as a developer: \n",
+    "1. Remove yourself as a model owner: \n",
+    "\n",
+    "    - Click on the **OWNERS** tile.\n",
+    "    - Click the **x** next to your name to remove yourself from that model's role.\n",
+    "    - Click **Save** to apply your changes to that role.\n",
+    "\n",
+    "2. Remove yourself as a developer: \n",
     "\n",
     "    - Click on the **DEVELOPERS** tile.\n",
     "    - Click the **x** next to your name to remove yourself from that model's role.\n",
     "    - Click **Save** to apply your changes to that role.\n",
     "\n",
-    "2. Add yourself as a validator: \n",
+    "3. Add yourself as a validator: \n",
     "\n",
     "    - Click on the **VALIDATORS** tile.\n",
     "    - Select your name from the drop-down menu.\n",
